[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantaudit"
version = "0.1.0"
description = "A forensic auditing library for probabilistic models in asymmetric payoff environments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Andres Cabra"}
]

keywords = [
    "machine-learning",
    "probability",
    "calibration",
    "finance",
    "statistics",
    "evaluation",
    "diagnostics"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8"
]

[project.urls]
Homepage = "https://github.com/Andres08232/QuantAudit"
Repository = "https://github.com/Andres08232/QuantAudit"
Issues = "https://github.com/Andres08232/QuantAudit/Issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.12",
    "black>=25.0",
    "build>=1.2",
    "twine>=6.0"
]

[tool.setuptools.packages.find]
include = ["quantaudit*"]